# metric-daemon

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
src/: client.c  main.c  server.c
