AC_PREREQ([2.64])
AC_INIT([metric-daemon], [1.0])
AM_INIT_AUTOMAKE([ -Wall -Werror subdir-objects])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC_C99
#AC_CHECK_LIB(m, floor)
#AC_CHECK_LIB(jansson, json_load_file)
#AC_CHECK_LIB(meterplugin, plugin_run)
AC_CHECK_HEADERS([stdlib.h])
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
